# chess-engine

./: README.md  pyproject.toml
sic/: __init__.py  __main__.py
sic/uci/: __init__.py  commands.py  options.py
